--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
    <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=1190px, initial-scale=0">
-      <meta name="viewport" content="height=737px, initial-scale=0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/index-style.css"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.googleapis.com">
